start/finish index.html

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2,4 +2,14 @@
 @import 'partial/global/fonts';
 @import 'partial/global/variable';
 @import 'partial/global/mixins';
-@import 'partial/blocks/heade';
+@import 'partial/owl-carousel/owl.carousel';
+@import 'partial/owl-carousel/owl.theme.default';
+@import 'partial/blocks/page';
+@import 'partial/blocks/page-header';
+@import 'partial/blocks/main-nav';
+@import 'partial/blocks/slider';
+@import 'partial/blocks/title-section';
+@import 'partial/blocks/products-card';
+@import 'partial/blocks/gallery';
+@import 'partial/blocks/contacts';
+@import 'partial/blocks/page-footer';
