--- a/src/template/include/header.html
+++ b/src/template/include/header.html
@@ -1,3 +1,27 @@
-<header>
-  <div>🍊🗝️</div>
+<header class="page-header">
+  <div class="page-header__top-wrapper">
+    <div class="page-header__top">
+      <div class="page-header__top-logo">sp-metiz</div>
+      <div class="page-header__top-contacts">
+        <div class="page-header__top-contacts-mail"><img src="img/mail.svg" alt="почта"><a href="mailto:info@sp-metiz.ru">info@sp-metiz.ru</a>
+        </div>
+        <div class="page-header__top-contacts-tel"><img src="img/phone.svg" alt="телефон"><a href="tel:+74993431291">+7 (499) 343-12-91</a></div>
+        <div class="page-header__top-contacts-address"><img src="img/home.svg" alt="контакты">г. Подольск, ул.Орджоникидзе 23
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="page-header__bottom-wrapper">
+    <div class="page-header__bottom">
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__list-item"><a href="">О компании</a></li>
+          <li class="main-nav__list-item"><a href="">Продукция</a></li>
+          <li class="main-nav__list-item"><a href="">Цены и прайс</a></li>
+          <li class="main-nav__list-item"><a href="">Применение в строительстве</a></li>
+          <li class="main-nav__list-item"><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
