--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -12,4 +12,6 @@
 @import 'partial/blocks/products-card';
 @import 'partial/blocks/gallery';
 @import 'partial/blocks/contacts';
+@import 'partial/blocks/about';
+@import 'partial/blocks/price';
 @import 'partial/blocks/page-footer';
