--- a/src/template/include/header.html
+++ b/src/template/include/header.html
@@ -1,12 +1,18 @@
 <header class="page-header">
   <div class="page-header__top-wrapper">
     <div class="page-header__top">
-      <div class="page-header__top-logo">sp-metiz</div>
+      <div class="page-header__top-logo">Сп-метиз
+        <div class="page-header__top-logo-sub">производство и продажа <br> металлической сетки</div>
+      </div>
       <div class="page-header__top-contacts">
-        <div class="page-header__top-contacts-mail"><img src="img/mail.svg" alt="почта"><a href="mailto:info@sp-metiz.ru">info@sp-metiz.ru</a>
+        <div class="page-header__top-contacts-mail"><img src="img/mail.svg" alt="почта">
+          <div class="page-header__top-contacts-mail-bunch"><a href="mailto:info@sp-metiz.ru">info@sp-metiz.ru</a><a href="mailto:setka-msk@yandex.ru">setka-msk@yandex.ru</a></div>
         </div>
-        <div class="page-header__top-contacts-tel"><img src="img/phone.svg" alt="телефон"><a href="tel:+74993431291">+7 (499) 343-12-91</a></div>
-        <div class="page-header__top-contacts-address"><img src="img/home.svg" alt="контакты">г. Подольск, ул.Орджоникидзе 23
+        <div class="page-header__top-contacts-tel"><img src="img/phone.svg" alt="телефон">
+          <div class="page-header__top-contacts-tel-bunch"><a href="tel:+74993431291">+7 (499) 343-12-91</a>
+            <a href="tel:+74994089796">+7 (499) 408-97-96</a></div>
+        </div>
+        <div class="page-header__top-contacts-address"><img src="img/home.svg" alt="контакты">МО г.Климовск, <br>Бережковский проезд д.4
         </div>
       </div>
     </div>
@@ -15,11 +21,11 @@
     <div class="page-header__bottom">
       <nav class="main-nav">
         <ul class="main-nav__list">
-          <li class="main-nav__list-item"><a href="">О компании</a></li>
-          <li class="main-nav__list-item"><a href="">Продукция</a></li>
-          <li class="main-nav__list-item"><a href="">Цены и прайс</a></li>
-          <li class="main-nav__list-item"><a href="">Применение в строительстве</a></li>
-          <li class="main-nav__list-item"><a href="">Контакты</a></li>
+          <li class="main-nav__list-item"><a href="#" onclick="$( '#section-1').animatescroll();">Продукция</a></li>
+          <li class="main-nav__list-item"><a href="#" onclick="$( '#section-2').animatescroll();">Цены и прайс</a></li>
+          <li class="main-nav__list-item"><a href="#" onclick="$( '#section-3').animatescroll();">О компании</a></li>
+          <li class="main-nav__list-item"><a href="#" onclick="$( '#section-4').animatescroll();">Применение в строительстве</a></li>
+          <li class="main-nav__list-item"><a href="#" onclick="$( '#section-5').animatescroll();">Контакты</a></li>
         </ul>
       </nav>
     </div>
