--- a/src/template/index.html
+++ b/src/template/index.html
@@ -24,34 +24,82 @@
         <img src="img/slider-pic-3.jpg" alt="">
         <p class="slider__main-item-text">Наша компания занимается производством и продажей металлической сетки всех типов и размеров.</p>
       </div>
+      <!--
+      <div class="item slider__main-item">
+        <img src="img/slider-pic-4.jpg" alt="">
+        <p class="slider__main-item-text">Наша компания занимается производством и продажей металлической сетки всех типов и размеров.</p>
+      </div>
+-->
     </div>
   </section>
-  <section class="title-section">Наша продукция</section>
+
+  <section class="title-section" id="section-1">Наша продукция</section>
   <div class="products-card__wrapper">
     <section class="products-card">
       <div class="products-card__item">
         <div class="products-card__item-image-wrapper">
           <img src="img/product-card-1.jpg" alt="" class="products-card__item-image">
         </div>
-        <h3 class="products-card__item-title">Пространственные арматурные каркасы</h3>
-        <p class="products-card__item-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam eaque, eveniet sint aliquid hic harum odio voluptatum fugiat provident, voluptate.</p>
+        <h3 class="products-card__item-title">Сетка сварная в картах</h3>
       </div>
       <div class="products-card__item">
         <div class="products-card__item-image-wrapper">
-          <img src="img/product-card-1.jpg" alt="" class="products-card__item-image">
+          <img src="img/product-card-2.jpeg" alt="" class="products-card__item-image">
         </div>
-        <h3 class="products-card__item-title">Пространственные арматурные каркасы</h3>
-        <p class="products-card__item-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam eaque, eveniet sint aliquid hic harum odio voluptatum fugiat provident, voluptate.</p>
+        <h3 class="products-card__item-title">Сетка сварная оцинкованная</h3>
       </div>
       <div class="products-card__item">
         <div class="products-card__item-image-wrapper">
-          <img src="img/product-card-1.jpg" alt="" class="products-card__item-image">
+          <img src="img/product-card-3.jpg" alt="" class="products-card__item-image">
         </div>
-        <h3 class="products-card__item-title">Пространственные арматурные каркасы</h3>
-        <p class="products-card__item-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam eaque, eveniet sint aliquid hic harum odio voluptatum fugiat provident, voluptate.</p>
+        <h3 class="products-card__item-title">Сетка арматурная</h3>
+      </div>
+      <div class="products-card__item">
+        <div class="products-card__item-image-wrapper">
+          <img src="img/product-card-4.jpeg" alt="" class="products-card__item-image">
+        </div>
+        <h3 class="products-card__item-title">Сетка тканая</h3>
+      </div>
+      <div class="products-card__item">
+        <div class="products-card__item-image-wrapper">
+          <img src="img/product-card-5.jpg" alt="" class="products-card__item-image">
+        </div>
+        <h3 class="products-card__item-title">Каркасы арматурные</h3>
+      </div>
+      <div class="products-card__item">
+        <div class="products-card__item-image-wrapper">
+          <img src="img/product-card-6.jpeg" alt="" class="products-card__item-image">
+        </div>
+        <h3 class="products-card__item-title">Проволока вязальная</h3>
       </div>
     </section>
   </div>
+  <section class="title-section" id="section-2">Цены и прайс</section>
+  <div class="price__wrapper">
+    <section class="price">
+      <a href="http://sp-metiz.ru/file/24518.pdf" class="price__link" target="_blank"><img src="img/prices.jpg" alt="" class="price__link-image"></a>
+    </section>
+  </div>
+  <section class="title-section" id="section-3">О компании</section>
+  <div class="about__wrapper">
+    <section class="about">
+      <p class="about__content">Компания СП-МЕТИЗ производит и продает металлические сетки всех видов и размеров, осуществляет доставку по всей территории России.
+        <ul class="about__content-list">
+          <li class="about__content-list-item">Сетка сварная в картах из проволоки Вр-1 и арматуры А500С/В500С диаметром 3-14мм. Ячейка от 30-300мм. Максимальный размер карты 2400х6000мм. (кладочная сетка, дорожная сетка)</li>
+          <li class="about__content-list-item">Сетка сварная в рулонах (черн/оцинк) Ячейка 6х6, 10х10, 20х20, 25х25, 50х50, 50х100мм. Диаметр проволоки 0,4-3,0мм.</li>
+          <li class="about__content-list-item">ССЦП сетка сварная цинковое покрытие. Ячейка ССЦП 250х50, 200х50, 100х50 и др. Заборные секции с ребром жесткости. Возможно покрытие ПВХ по RAL.</li>
+          <li class="about__content-list-item">Сетка тканая (штукатурная, отсечка) Ячейка 2х2, 5х5х0.7, 10х10х0.8, 14х14, 20х20мм. Диаметр 0,4-1мм. Черн/оцинкованная. Рулон шириной 1м.</li>
+          <li class="about__content-list-item">Сетка плетеная Рабица Черн/Оцинкованная. Ячейка 10х10, 15х15, 20х20, 25х25, 50х50, 55х55мм. Диаметр от 0,8 до 3,0мм.</li>
+          <li class="about__content-list-item">Изготовление нестандартной сварной сетки в картах. Сварных каркасов для ЖБИ, колодезных колец, дорожных плит из проволоки Вр-1 и арматуры А500С/В500С.</li>
+          <li class="about__content-list-item">Поставка проволоки ОК ГОСТ 3282-74 (т/о, т/н) вязальная, ГОСТ 6727-80 Вр-1 для армирования ЖБК и арматурного проката класса А500С/В500С.</li>
+          <li class="about__content-list-item">Сварные арматурные каркасы, плоские закладные детали диаметром до 32мм (КР-1, КП-1)</li>
+          <li class="about__content-list-item">Оцинкование сетки и др.деталей. Максимальные размеры 2000х3000мм.</li>
+        </ul>
+      </p>
+    </section>
+  </div>
+  <section class="title-section" id="section-4">Применение в строительстве</section>
+  <!--
   <section class="title-section title-section--grey">Фотогалерея</section>
   <div class="gallery__wrapper">
     <section class="gallery">
@@ -68,7 +116,8 @@
       </div>
     </section>
   </div>
-  <section class="title-section">Контакты</section>
+-->
+  <section class="title-section" id="section-5">Контакты</section>
   <section class="contacts">
     <div class="contacts__map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2264.6052941541398!2d37.57348541603017!3d55.41723638046494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414aa80cfbeaf3e5%3A0x7c7737eedd24afc7!2z0YPQuy4g0J7RgNC00LbQvtC90LjQutC40LTQt9C1LCAyMywg0J_QvtC00L7Qu9GM0YHQuiwg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC7LiwgMTQyMTAz!5e0!3m2!1sru!2sru!4v1527024718322" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -78,6 +127,7 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="js/owl.carousel.min.js"></script>
+<script src="js/animatescroll.min.js"></script>
 <script src="js/settings.min.js"></script>
 
 </html>
