--- a/src/css/partial/blocks/main-nav.scss
+++ b/src/css/partial/blocks/main-nav.scss
@@ -12,6 +12,7 @@
         text-decoration: none;
         color: #333;
         text-transform: uppercase;
+        font-weight: 100;
       }
     }
   }
