--- a/src/css/partial/blocks/page-header.scss
+++ b/src/css/partial/blocks/page-header.scss
@@ -1,41 +1,90 @@
-.page-header{
-  &__top{
+.page-header {
+  &__top {
     @extend %container;
     @extend %grid-padding;
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
     color: #333;
-    &-logo{
+    &-logo {
       font-size: 48px;
       text-transform: uppercase;
       color: #5276A4;
+      &-sub {
+        font-size: 16px;
+        text-align: center;
+        text-transform: none;
+        line-height: 18px;
+        font-weight: 100;
+      }
     }
-    &-contacts{
+    &-contacts {
       flex-grow: 2;
       display: flex;
       justify-content: space-around;
       margin-top: auto;
       margin-bottom: auto;
-      img{
+      font-weight: 100;
+      line-height: 20px;
+      &-tel {
+        display: flex;
+        img {
+          width: 20px;
+          height: 20px;
+          margin-top: 8px;
+          margin-right: 5px;
+        }
+        &-bunch {
+          display: flex;
+          flex-direction: column;
+          a {
+            margin-bottom: 3px;
+          }
+        }
+      }
+      &-mail {
+        display: flex;
+        img {
+          width: 20px;
+          height: 20px;
+          margin-top: 8px;
+        }
+        &-bunch {
+          display: flex;
+          flex-direction: column;
+          a {
+            margin-bottom: 3px;
+          }
+        }
+      }
+      &-address {
+        display: flex;
+        img {
+          width: 20px;
+          height: 20px;
+          margin-top: 6px;
+        }
+      }
+      img {
         width: 20px;
         transform: translateY(3px);
-        margin-right: 8px;
+        margin-right: 13px;
       }
-      a{
+      a {
         text-decoration: none;
         color: #333;
       }
     }
   }
-  &__bottom{
-    &-wrapper{
+  &__bottom {
+    &-wrapper {
       background-color: rgb(238, 238, 238);
     }
     @extend %container;
     @extend %grid-padding;
   }
 }
+
 @media #{$tablet-widths} {
   header {
     background-color: midnightblue;
