--- a/src/css/partial/blocks/products-card.scss
+++ b/src/css/partial/blocks/products-card.scss
@@ -2,11 +2,13 @@
   @extend %container;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   &__item {
     width: calc(33.333333% - 20px);
+    margin-bottom: 20px;
     &-image {
       width: 100%;
-      height: 100%;
+      height: auto;
       &-wrapper {
         height: 200px;
         overflow-y: hidden;
@@ -17,6 +19,8 @@
       font-size: 20px;
       padding-left: 10px;
       padding-right: 10px;
+      font-weight: 400;
+      text-align: center;
     }
     &-descr {
       padding-left: 10px;
