first look main page

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,4 +14,6 @@
 @import 'partial/blocks/contacts';
 @import 'partial/blocks/about';
 @import 'partial/blocks/price';
+@import 'partial/blocks/delievery';
+@import 'partial/blocks/use-building';
 @import 'partial/blocks/page-footer';
