--- a/src/template/include/header.html
+++ b/src/template/include/header.html
@@ -26,6 +26,7 @@
           <li class="main-nav__list-item"><a href="#" onclick="$( '#section-3').animatescroll();">О компании</a></li>
           <li class="main-nav__list-item"><a href="#" onclick="$( '#section-4').animatescroll();">Применение в строительстве</a></li>
           <li class="main-nav__list-item"><a href="#" onclick="$( '#section-5').animatescroll();">Контакты</a></li>
+          <li class="main-nav__list-item"><a href="#" onclick="$( '#section-6').animatescroll();">Доставка</a></li>
         </ul>
       </nav>
     </div>
