--- a/src/template/index.html
+++ b/src/template/index.html
@@ -99,6 +99,12 @@
     </section>
   </div>
   <section class="title-section" id="section-4">Применение в строительстве</section>
+  <div class="use-building__wrapper">
+    <section class="use-building">
+      <p class="use-building__content">Армирование бетонной стяжки при монолитных работах, заливка фундамента, промышленные полы. Армирование кирпичной кладки и штукатурных работах. Изготовление заборных секций, ограждений и сетчатых конструкций. Укрепление сводов тоннелей, мостов.
+      </p>
+    </section>
+  </div>
   <!--
   <section class="title-section title-section--grey">Фотогалерея</section>
   <div class="gallery__wrapper">
@@ -123,6 +129,12 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2264.6052941541398!2d37.57348541603017!3d55.41723638046494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414aa80cfbeaf3e5%3A0x7c7737eedd24afc7!2z0YPQuy4g0J7RgNC00LbQvtC90LjQutC40LTQt9C1LCAyMywg0J_QvtC00L7Qu9GM0YHQuiwg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC7LiwgMTQyMTAz!5e0!3m2!1sru!2sru!4v1527024718322" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </section>
+  <section class="title-section title-section--grey" id="section-6">Доставка</section>
+  <div class="delievery__wrapper">
+    <section class="delievery">
+    <p class="delievery__text">Осуществляем доставку продукции по Москве и области,  всей территории России. Собственный автотранспорт,  цены уточняйте у менеджера</p>
+    <img src="img/car.jpg" alt=""></section>
+  </div>
   //= include/footer.html
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
