--- a/src/template/index.html
+++ b/src/template/index.html
@@ -141,5 +141,6 @@
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/animatescroll.min.js"></script>
 <script src="js/settings.min.js"></script>
+<script src="js/open.min.js"></script>
 
 </html>
