--- a/src/css/partial/blocks/main-nav.scss
+++ b/src/css/partial/blocks/main-nav.scss
@@ -1,5 +1,8 @@
-.main-nav{
-  &__list{
+.main-nav {
+  &__toggle {
+    display: none;
+  }
+  &__list {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -7,12 +10,99 @@
     justify-content: space-between;
     padding-top: 20px;
     padding-bottom: 20px;
-    &-item{
-      a{
+    &-item {
+      a {
         text-decoration: none;
         color: #333;
         text-transform: uppercase;
         font-weight: 100;
+      }
+    }
+  }
+}
+
+@media #{$tablet-widths} {
+  .main-nav {
+    &__list {
+      &-item {
+        a {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+@media #{$mobile-widths} {
+  .main-nav {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    &--closed {
+      visibility: hidden;
+      .main-nav__list,
+      .main-nav__registration,
+      .main-nav__sign-in {
+        display: none;
+      }
+    }
+    &__list {
+      flex-direction: column;
+      position: absolute;
+      background-color: #EEE;
+      order: 3;
+      width: calc(100% + 40px);
+      left: -20px;
+      padding-top: 0;
+      padding-bottom: 0;
+      box-sizing: border-box;
+      padding-left: 20px;
+      z-index: 100;
+      a {
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 40px;
+      }
+    }
+    &__toggle {
+      position: absolute;
+      background-color: #5876A0;
+      display: block;
+      width: 24px;
+      height: 4px;
+      font-size: 0;
+      border: none;
+      right: 10px;
+      top: -58px;
+      transition: 0.4s all;
+      z-index: 999;
+      visibility: visible;
+      outline: none;
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        background-color: #5876A0;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        transition: 0.4s all;
+      }
+      &::before {
+        top: -7px;
+      }
+      &::after {
+        bottom: -7px;
+      }
+      &--open {
+        background-color: transparent;
+        top: -50px;
+        &::after {
+          transform: rotate(45deg) translate(-10px, -10px);
+        }
+        &::before {
+          transform: rotate(-45deg);
+        }
       }
     }
   }
