--- a/src/template/include/header.html
+++ b/src/template/include/header.html
@@ -19,7 +19,8 @@
   </div>
   <div class="page-header__bottom-wrapper">
     <div class="page-header__bottom">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list">
           <li class="main-nav__list-item"><a href="#" onclick="$( '#section-1').animatescroll();">Продукция</a></li>
           <li class="main-nav__list-item"><a href="#" onclick="$( '#section-2').animatescroll();">Цены и прайс</a></li>
