--- a/src/css/partial/blocks/products-card.scss
+++ b/src/css/partial/blocks/products-card.scss
@@ -31,6 +31,10 @@
 }
 @media #{$mobile-widths}{
   .products-card{
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
     &__item{
        width: 100%;
     }
