--- a/src/template/include/header.html
+++ b/src/template/include/header.html
@@ -12,7 +12,7 @@
           <div class="page-header__top-contacts-tel-bunch"><a href="tel:+74993431291">+7 (499) 343-12-91</a>
             <a href="tel:+74994089796">+7 (499) 408-97-96</a></div>
         </div>
-        <div class="page-header__top-contacts-address"><img src="img/home.svg" alt="контакты">МО г.Климовск, <br>Бережковский проезд д.4
+        <div class="page-header__top-contacts-address"><img src="img/home.svg" alt="контакты">МО го.Подольск, мкр.Климовск, <br>Бережковский проезд д.4
         </div>
       </div>
     </div>
