--- a/src/template/include/header.html
+++ b/src/template/include/header.html
@@ -6,7 +6,7 @@
       </div>
       <div class="page-header__top-contacts">
         <div class="page-header__top-contacts-mail"><img src="img/mail.svg" alt="почта">
-          <div class="page-header__top-contacts-mail-bunch"><a href="mailto:info@sp-metiz.ru">info@sp-metiz.ru</a><a href="mailto:setka-msk@yandex.ru">setka-msk@yandex.ru</a></div>
+          <div class="page-header__top-contacts-mail-bunch"><a href="mailto:setka-msk@yandex.ru">setka-msk@yandex.ru</a></div>
         </div>
         <div class="page-header__top-contacts-tel"><img src="img/phone.svg" alt="телефон">
           <div class="page-header__top-contacts-tel-bunch"><a href="tel:+74993431291">+7 (499) 343-12-91</a>
