--- a/src/template/index.html
+++ b/src/template/index.html
@@ -99,28 +99,10 @@
       </p>
     </section>
   </div>
-  <!--
-  <section class="title-section title-section--grey">Фотогалерея</section>
-  <div class="gallery__wrapper">
-    <section class="gallery">
-      <div class="owl-carousel owl-theme gallery__main">
-        <div class="item galley__main-item">
-          <img src="img/gallery-pic-1.jpeg" alt="">
-        </div>
-        <div class="item gallery__main-item">
-          <img src="img/gallery-pic-2.jpg" alt="">
-        </div>
-        <div class="item gallery__main-item">
-          <img src="img/gallery-pic-2.jpg" alt="">
-        </div>
-      </div>
-    </section>
-  </div>
--->
   <section class="title-section" id="section-5">Контакты</section>
   <section class="contacts">
     <div class="contacts__map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2264.6052941541398!2d37.57348541603017!3d55.41723638046494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414aa80cfbeaf3e5%3A0x7c7737eedd24afc7!2z0YPQuy4g0J7RgNC00LbQvtC90LjQutC40LTQt9C1LCAyMywg0J_QvtC00L7Qu9GM0YHQuiwg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC7LiwgMTQyMTAz!5e0!3m2!1sru!2sru!4v1527024718322" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2266.9173308008753!2d37.55980188557126!3d55.37689899194426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTXCsDIyJzM2LjgiTiAzN8KwMzMnNDAuNCJF!5e0!3m2!1sru!2sru!4v1543853375551" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </section>
   <section class="title-section title-section--grey" id="section-6">Доставка</section>
