--- a/src/css/partial/blocks/page-header.scss
+++ b/src/css/partial/blocks/page-header.scss
@@ -53,7 +53,7 @@
           display: flex;
           flex-direction: column;
           a {
-            margin-bottom: 3px;
+           margin-top: 11px;
           }
         }
       }
